# mappymatch

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api-docs.html  contributor_environment.yml  environment.yml  environment_dev.yml  genindex.html  home.html  install.html  lcss_matches.html  mappymatch.code-workspace  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  quick-start.html  requirements-dev.in  requirements-dev.txt  requirements-tests.in  requirements-tests.txt  requirements.txt  search.html  searchindex.js  setup.py  snap_matches.html  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: assign.yml  assign_or_assign.yml  ci_tests_pinned.yml  ci_tests_unpinned.yml  deploy-docs.yaml  lint-test.yml  lint_and_test.yml  lint_only.yml  lint_test.yml  python-package-conda.yml  release.yaml  test_only.yml
_autosummary/: mappymatch.constructs.coordinate.html  mappymatch.constructs.geofence.html  mappymatch.constructs.html  mappymatch.constructs.match.html  mappymatch.constructs.road.html  mappymatch.constructs.trace.html  mappymatch.maps.html  mappymatch.maps.igraph.html  mappymatch.maps.igraph.igraph_map.html  mappymatch.maps.map_interface.html  mappymatch.maps.nx.html  mappymatch.maps.nx.nx_map.html  mappymatch.maps.nx.readers.html  mappymatch.maps.nx.readers.osm_readers.html  mappymatch.matchers.html  mappymatch.matchers.lcss.constructs.html  mappymatch.matchers.lcss.html  mappymatch.matchers.lcss.lcss.html  mappymatch.matchers.lcss.ops.html  mappymatch.matchers.lcss.utils.html  mappymatch.matchers.line_snap.html  mappymatch.matchers.match_result.html  mappymatch.matchers.matcher_interface.html  mappymatch.matchers.osrm.html  mappymatch.matchers.valhalla.html  mappymatch.utils.crs.html  mappymatch.utils.exceptions.html  mappymatch.utils.geo.html  mappymatch.utils.html  mappymatch.utils.plot.html  mappymatch.utils.process_trace.html  mappymatch.utils.url.html
_modules/: index.html
_sources/: install.md  lcss-example.ipynb
_sources/_autosummary/: mappymatch.constructs.geofence.rst  mappymatch.constructs.road.rst  mappymatch.maps.nx.readers.rst  mappymatch.maps.rst  mappymatch.matchers.lcss.constructs.rst  mappymatch.matchers.lcss.lcss.rst  mappymatch.matchers.lcss.utils.rst  mappymatch.matchers.valhalla.rst  mappymatch.utils.plot.rst  mappymatch.utils.rst  mappymatch.utils.url.rst
docker/image-build/: Dockerfile_build_310  Dockerfile_build_38  Dockerfile_build_39  build_docker_images.ps1  test_environment_python_38.yml
docker/image_build/: Dockerfile_build_310  Dockerfile_build_38  Dockerfile_build_39  build_docker_images.ps1  test_environment_python_310.yml  test_environment_python_39.yml
docker/test/: Dockerfile_test_310  Dockerfile_test_38  Dockerfile_test_39  test_docker_images.ps1
docs/: _config.yml  _toc.yml  api-docs.md  home.md  quick-start.md  requirements.txt
docs/_autosummary/: mappymatch.constructs.coordinate.rst  mappymatch.constructs.match.rst  mappymatch.constructs.rst  mappymatch.constructs.trace.rst  mappymatch.maps.igraph.igraph_map.rst  mappymatch.maps.igraph.rst  mappymatch.maps.map_interface.rst  mappymatch.maps.nx.nx_map.rst  mappymatch.maps.nx.readers.osm_readers.rst  mappymatch.maps.nx.rst  mappymatch.matchers.lcss.ops.rst  mappymatch.matchers.lcss.rst  mappymatch.matchers.line_snap.rst  mappymatch.matchers.match_result.rst  mappymatch.matchers.matcher_interface.rst  mappymatch.matchers.osrm.rst  mappymatch.matchers.rst  mappymatch.utils.crs.rst  mappymatch.utils.exceptions.rst  mappymatch.utils.geo.rst  mappymatch.utils.process_trace.rst
docs/source/: conf.py  index.rst
examples/: lcss_matches.html  line_snap_vs_lcss.py  match_one_trace copy.py  match_one_trace.py  plotting_example.ipynb  snap_matches.html
examples/notebooks/: yamm-example.ipynb
mappymatch/: __init__.py
mappymatch/constructs/: coordinate.py  geofence.py  match.py  road.py  trace.py
mappymatch/maps/: map_interface.py
mappymatch/matchers/: line_snap.py  match_result.py  matcher_interface.py  osrm.py  valhalla.py
mappymatch/tests/: __init__.py  test_coordinate.py  test_geofence.py  test_lcss_add_match_for_stationary.py  test_lcss_drop_stationary_points.py  test_lcss_find_stationary_points.py  test_lcss_same_trajectory_scheme.py  test_osm.py  test_process_trace.py  test_trace.py
mappymatch/utils/: abc.py  crs.py  exceptions.py  geo.py  geohash.py  keys.py  match_score_plot.ipynb  plot.py  process_trace.py  url.py  visualization.py
notebooks/: README.md  yamm-example.ipynb
resources/: austin_tomtom_network.pickle.REMOVED.git-id  sample_trace_4.csv  sample_trace_5.csv
resources/austin_shp_file/: austin_shp_file.dbf  austin_shp_file.shp  austin_shp_file.shx
resources/traces/: sample_trace_1.csv  sample_trace_2.csv  sample_trace_3.csv
tests/: __init__.py  test_bounding_box.py  test_geo.py  test_geofence.py  test_lcss_add_match_for_stationary.py  test_lcss_compress.py  test_lcss_drop_stationary_points.py  test_lcss_find_stationary_points.py  test_lcss_forward_merge.py  test_lcss_merge.py  test_lcss_reverse_merge.py  test_lcss_same_trajectory_scheme.py  test_match_result.py  test_osm.py  test_process_trace.py  test_trace.py  test_valhalla.py
tests/test_assets/: downtown_denver_road_network.pickle  osmnx_drive_graph.graphml  osmnx_drive_graph.pickle  pull_osm_map.py  test_trace.geojson  test_trace.gpx  test_trace_stationary_points.geojson  trace_bad_start.geojson
tmp/: mappymatch.constructs.rst  mappymatch.maps.nx.readers.rst  mappymatch.maps.nx.rst  mappymatch.maps.rst  mappymatch.matchers.lcss.rst  mappymatch.matchers.rst  mappymatch.rst  mappymatch.utils.rst  modules.rst
yamm/: Untitled.ipynb  __init__.py
yamm/constructs/: bbox.py  coordinate.py  geofence.py  match.py  road.py  trace.py
yamm/maps/: map_interface.py  networkx_map.py  tomtom_map.py
yamm/matchers/: line_snap.py  matcher_interface.py  osrm.py  sandboxtest.ipynb
yamm/utils/: abc.py  crs.py  distance_calculations.py  exceptions.py  geo.py  match_score.ipynb  plot.py  process_trace.py  (+4 more)
(+57 files in other folders)
